--- a/adventure.html
+++ b/adventure.html
@@ -365,8 +365,20 @@ Prevailing measures of similarity gave high scores to sequences containing segme
 <p>                   
 The basic innovation I proposed was not specific to spoken language. I figured it could be applied to either spoken or written language, text. If the innovation had value, I should be able to demonstrate that value using text. It would be much easier to run experiments with text, rather than with audio. Also, the field of text classification was more general and widely studied than the field of spoken language identification. So, I decided to first try to validate my ideas using standard text classification tasks. 
 
+<p> 
+By the end of the year, 2009, I had some positive experimental results, something Dr. Ringger kept reminding me I needed to have!
+
+<p> 
+Dr. Ringger worked with Hal Daume from the University of Utah to organize an NLP (Natural Language Processing) Fest for their students, to be held at the end of February (2010). In preparation for this fest, he invited his students to present their research to each other. I struggled to prepare my practice presentation. On Wednesday, February 3rd, I wrote: "Yesterday I presented a preliminary version of my thesis proposal to the NLP lab. It went very well. I was working on it on Monday, but was struggling a lot and not making much progress. It is important for me to remember to call upon the Lord in all of my concerns. I did that, and the next day I was able to make much better progress. I felt that it would be a good idea to fast because I was presenting that day. So I did. While fasting, I was reminded that I could fast when I needed help with something especially difficult for me. I will remember to do that in the future."
+
+<p> 
+In retrospect, I would like to share a scripture from the Book of Mormon. I don't remember if this specific scripture came to mind when I had that experience, but it most likely did. The verse is Alma 34:20 "Cry unto him when ye are in your fields, yea, over all your flocks." I had come to understand that is was OK to ask God for His help with things like my work, things which one might not think would rise to the level of Divine concern. Yet at the same time I found myself forgetting the principle, repeatedly trying to do too much on my own. I was trying to do a lot. I was married. We had eleven children. Our youngest was not yet three years old. Suzanne and I both actively served in our church. We tried to be good neighbors. 
+
+<p> 
+I did receive much help from Heaven, particularly that month. I had several key insights into my research. I realized that the fewest possible number of segments from training data which could be concatenated to generate a sequence was generally the most likely number of segments to have randomly been drawn (to generate the sequence according to my model), and that it was possible to determine that number very efficiently. Dr. Ringger told me about a certain type of data structure called a suffix trie, which could help to calculate the number. 
+
 <p>
-<small>Last revised 18 May 2022</small>
+<small>Last revised 8 July 2022</small>
 <p>
 <small>Copyright &copy; 2022 Kevin Cook</small>
 </body>
