Seeking a PhD advisor

--- a/adventure.html
+++ b/adventure.html
@@ -377,8 +377,37 @@ In retrospect, I would like to share a scripture from the Book of Mormon. I don'
 <p> 
 I did receive much help from Heaven, particularly that month. I had several key insights into my research. I realized that the fewest possible number of segments from training data which could be concatenated to generate a sequence was generally the most likely number of segments to have randomly been drawn (to generate the sequence according to my model), and that it was possible to determine that number very efficiently. Dr. Ringger told me about a certain type of data structure called a suffix trie, which could help to calculate the number. 
 
+<p> 
+By this point in time, I had essentially completed the required course work for my Master's degree. I got so much out of those courses! I especially enjoyed the course on Bayesian methods I took from Dr. Seppi.
+
+<p> 
+And by this same time I was finally making good progress towards writing the required thesis. If my goal was to earn a Master's degree, I should have been close to finishing. But my goal was to earn a doctoral degree. That is what I had felt so strongly that I should try to do, before going back to school. 
+
+<p> 
+In my letter of intent, as part of applying to the Master's program, I wrote that I intended to continue on to complete a doctoral degree.
+
+<p> 
+In May of 2009 I had asked Dr. Ringger if he would be my PhD advisor. I understood that I would need someone willing to be my advisor in order to be accepted into the doctoral program. He had told me that doing so would be a big commitment for him. His initial answer was no, but it might change if I did good work later on my thesis.
+
+<p> 
+On January 26, 2010, I recorded in my journal an impression I had received, that I should plan to switch advisors from Dr. Ringger to Dr. Seppi. 
+
+<p> 
+On March 9th I talked again with Dr. Ringger about being my PhD advisor. I thought I had made good progress on my thesis and that he might be willing to change his mind. He was not willing at that time.
+
+<p> 
+Remembering that I had received an impression that Dr. Seppi would be a great PhD advisor for me, I asked him the following day. He didn't say yes, or no. I had no assurance that he would later agree to my request, except for the spiritual impression I had received.
+
+<p> 
+On April 9th I recorded: "I have decided to ask Dr. Seppi to be my adviser now, rather than later. Dr. Ringger has been very helpful to me in the progress which I have made to this point. It is now time for me to begin working with my future PhD adviser."
+
 <p>
-<small>Last revised 8 July 2022</small>
+A few days later I told Dr. Ringger about asking Dr. Seppi to be my advisor. 
+
+
+
+<p>
+<small>Last revised 26 July 2022</small>
 <p>
 <small>Copyright &copy; 2022 Kevin Cook</small>
 </body>
