Influence of fellow students

--- a/adventure.html
+++ b/adventure.html
@@ -404,11 +404,14 @@ On April 9th I recorded: "I have decided to ask Dr. Seppi to be my adviser now, 
 <p>
 A few days later I told Dr. Ringger about asking Dr. Seppi to be my advisor. 
 
-
-
+<p>
+Dr. Lonsdale, Dr. Ringger, and Dr. Seppi were not the only ones who greatly influenced my experience in graduate school. So also did my fellow students. One experience is particularly memorable. I didn't record anything about it at the time, so I don't know when it happened. My guess is that it occurred in the Fall of 2009.
 
 <p>
-<small>Last revised 26 July 2022</small>
+One day in the NLP lab I made an off-hand joke about evolution. (I used to do that sort of thing because the idea of our beautiful world being created by chance struck me as funny.) I do not remember what I said, but the response surprised me. The response was that my lab partners did not think my joke was very funny. One of them said that the evidence that man evolved was overwhelming. I do not think I responded. I had no idea what to say. 
+
+<p>
+<small>Last revised 27 July 2022</small>
 <p>
 <small>Copyright &copy; 2022 Kevin Cook</small>
 </body>
