--- a/adventure.html
+++ b/adventure.html
@@ -411,7 +411,11 @@ Dr. Lonsdale, Dr. Ringger, and Dr. Seppi were not the only ones who greatly infl
 One day in the NLP lab I made an off-hand joke about evolution. (I used to do that sort of thing because the idea of our beautiful world being created by chance struck me as funny.) I do not remember what I said, but the response surprised me. The response was that my lab partners did not think my joke was very funny. One of them said that the evidence that man evolved was overwhelming. I do not think I responded. I had no idea what to say. 
 
 <p>
-<small>Last revised 27 July 2022</small>
+This experience had a great impact upon me. I felt that something was terribly wrong. I felt a need to do something to help. I wondered why God had lead me back to BYU. Originally, I thought that He was helping me to establish myself in a career that would be right for me. Now, I wondered if there was some special service He wanted me to perform. My patriarchal blessing, received while attending BYU as a young man, gave me knowledge about future responsibilities the Lord would have me fulfill. I thought about that blessing and how it related to this experience.
+
+
+<p>
+<small>Last revised 28 July 2022</small>
 <p>
 <small>Copyright &copy; 2022 Kevin Cook</small>
 </body>
