Link study of language and DNA

--- a/adventure.html
+++ b/adventure.html
@@ -423,10 +423,22 @@ This experience had a great impact upon me. I felt that something was terribly w
 The idea came to me that I could use my model for generating language to randomly generate child DNA sequences from parent DNA sequences, and show that it is more likely that human DNA is a parent, rather than a child sequence when compared to other DNA.
 
 </p><p>
-<small>Last revised 8 December 2022</small>
+Armed with a new sense of purpose, I moved ahead with my studies. I planned to include a computational biology course in my future curriculum. I looked for ways to link my study of language to the study of DNA sequences.
 
 </p><p>
-<small>Copyright &copy; 2022 Kevin Cook</small>
+One link was probability. I already was learning about the probability of sequences of characters in text. Since DNA sequences are also represented as sequences of characters, I could apply what I learned about probability of sequences of characters in language to help me learn about probability of sequences of characters in DNA.
+
+</p><p>
+During the Summer of 2010 my advisor left to join his wife leading a study abroad tour for BYU students. Prior to leaving he was quite busy helping his other graduate students complete important tasks prior to his departure. I was pretty much on my own for several months.
+
+
+
+
+</p><p>
+<small>Last revised 11 May 2023</small>
+
+</p><p>
+<small>Copyright &copy; 2023 Kevin Cook</small>
 </p>
 </body>
 </html> 
