My advisor and me

--- a/adventure.html
+++ b/adventure.html
@@ -431,11 +431,20 @@ One link was probability. I already was learning about the probability of sequen
 </p><p>
 During the Summer of 2010 my advisor left to join his wife leading a study abroad tour for BYU students. Prior to leaving he was quite busy helping his other graduate students complete important tasks prior to his departure. I was pretty much on my own for several months.
 
-
-
+</p><p>
+When he returned I asked him if I could change my research area from text classification to language modeling. Text classification is the problem of classifying, assigning a class, or label, to a sequence of words. Language modeling is the problem of assigning a probability to a sequence of words, which probability can be used to classify the sequence. He wasn't excited about me making such fundamental change so late in the course of my studies, but he let me do it. 
 
 </p><p>
-<small>Last revised 11 May 2023</small>
+I was relieved that he let me pursue my own path, even more independently than before, but I didn't anticipate how difficult it would be for us to continue to work together. I didn't fully realize that bad feelings were damaging our relationship. Yes, I had told him that I wanted someone else to be my advisor, and I sincerely did, yet I didn't consider the possibility that I might irritate or offend him. 
+
+</p><p>
+The fact that I wanted a different advisor was not the only irritant. I also wanted to play the role of teacher, instead of student. I wanted to explain to him what he wasn't understanding. I appreciated his feedback, suggestions, and critique. They were invaluable to me and I couldn't have progressed without them. Yet, his most critical objections also revealed a lack of understanding. His objections helped me to better explain my work, I thought. 
+
+</p><p>
+My desire for him to understand me eclipsed my attention to his feelings. He simply was not comfortable with me or my research. He felt it was inappropriate for me to be teaching him. He didn't know exactly where I was mistaken, but I had to be. I was claiming that not only he but also an entire academic community had somehow missed something important, which I could help them see. That was extremely unlikely, and he was not excited about untangling whatever confusion mislead me. In my naive exuberance I would surely embarrass us both, he felt.
+
+</p><p>
+<small>Last revised 2 June 2023</small>
 
 </p><p>
 <small>Copyright &copy; 2023 Kevin Cook</small>
