Adding a personal journal entry

--- a/adventure.html
+++ b/adventure.html
@@ -458,10 +458,29 @@ On April 26, 2011 the oral proficiency paper I wrote with Jerry McGhee and Dr. L
 </p><p>
 Just 50 days later Dr. Ringger approved my thesis proposal. Success in my paper with Jerry and Dr. Lonsdale meant it was more likely that I would also succeed in my Master's thesis. 
 
-
+</p><p>
+Also during Winter semester in 2011, I took a course in Computational Biology taught by Mark Clement in the computer science department, with some help from the head of the biology department.
 
 </p><p>
-<small>Last revised 3 June 2023</small>
+My journal entry of July 1, 2011 reveals some insights into my thoughts, feelings, and experience at that time:
+</p>
+
+<blockquote>
+<p>
+"There is so much I haven't written. I did recruit Dr. Lonsdale and Jerry to help, and the OP submission was very successful. I just returned from ACL-HLT BEA (Association for Computational Linguistics - Human Language Technologies conference, Building Educational Applications) workshop were I presented our paper. Between Dr. Lonsdale, Ringger, and Seppi, all travel expenses were paid. I decided to pay for food. This paper represents a pivotal accomplishment for me in my new career. The Lord has blessed me greatly. 
+
+</p><p>
+Also, my master's thesis proposal is officially complete. On the morning of March 15th, I asked Suzanne to fast with me. I had been trying to write a needed revision of my thesis proposal, without much progress. At the same time I had heavy deadlines looming, with no room for any delays. My standing in the department was in jeopardy, my two winter semester classes were being neglected, and I had yet to revise and submit the oral proficiency (OP) paper. After our fast I was able to write. I wrote and wrote, and wrote well. I was so blessed. The Lord is helping me to understand that he wants me to turn to Him for help, rather than try to do everything own my own. I am learning that He will help me, that I must rely on Him.
+
+</p><p>
+I wrote a research paper in my computational biology class on a subject which I am planning to pursue as a PhD thesis, which is: In the segment selection model, the DNA of man is a more probable universal common ancestor than the DNA of a simpler life form. I have spoken with Dr. Clement about this and he believes that no scientist in the world will believe me, unless perhaps I am able to build sufficient credibility. He gave me some ideas as to how I might do that. He also advised my to not discuss my thesis with others, at least until some credibility in this area is established. I wonder if that request extends to my advisor."
+</p>
+</blockquote>
+
+<p>
+
+</p><p>
+<small>Last revised 5 June 2023</small>
 
 </p><p>
 <small>Copyright &copy; 2023 Kevin Cook</small>
