Adding a personal journal entry

--- a/adventure.html
+++ b/adventure.html
@@ -459,7 +459,7 @@ On April 26, 2011 the oral proficiency paper I wrote with Jerry McGhee and Dr. L
 Just 50 days later Dr. Ringger approved my thesis proposal. Success in my paper with Jerry and Dr. Lonsdale meant it was more likely that I would also succeed in my Master's thesis. 
 
 </p><p>
-Also during Winter semester in 2011, I took a course in Computational Biology taught by Mark Clement in the computer science department, with some help from the head of the biology department.
+Also during Winter semester, I took a course in Computational Biology taught by Mark Clement in the computer science department, with some help from the head of the biology department.
 
 </p><p>
 My journal entry of July 1, 2011 reveals some insights into my thoughts, feelings, and experience at that time:
