--- a/adventure.html
+++ b/adventure.html
@@ -478,13 +478,7 @@ I wrote a research paper in my computational biology class on a subject which I 
 </blockquote>
 
 <p>
-Now that the thesis proposal was approved, it was time to have fun writing code and running experiments!
-
-</p><p>
-However, it didn't take too long before I started to flounder. It was not as easy to prove my thesis as I thought it would be. Instead of enjoying smooth sailing, I worked up a sweat bailing. I got some promising results, but I also got results which seemed to go against what I was trying to prove. There was a lot more to learn than I expected, and it took much longer than I planned.
-
-</p><p>
-I ran gazillions of experiments. Truly the space of possible experiments is unbounded, infinite.
+Now that the thesis proposal was approved, it was time to have fun writing code and running experiments! However, it didn't take too long before I started to flounder. It was not as easy to prove my thesis as I thought it would be. Instead of enjoying smooth sailing, I worked up a sweat bailing. I got some promising results, but I also got results which seemed to go against what I was trying to prove. There was a lot more to learn than I expected, and it took much longer than I planned. I ran gazillions of experiments. Truly the space of possible experiments is unbounded, infinite.
 
 </p><p>
 <small>Last revised 6 June 2023</small>
