Feeling fairly good about experimental results. More selections from my journal.

--- a/adventure.html
+++ b/adventure.html
@@ -478,10 +478,41 @@ I wrote a research paper in my computational biology class on a subject which I 
 </blockquote>
 
 <p>
-Now that the thesis proposal was approved, it was time to have fun writing code and running experiments! However, it didn't take too long before I started to flounder. It was not as easy to prove my thesis as I thought it would be. Instead of enjoying smooth sailing, I worked up a sweat bailing. I got some promising results, but I also got results which seemed to go against what I was trying to prove. There was a lot more to learn than I expected, and it took much longer than I planned. I ran gazillions of experiments. Truly the space of possible experiments is unbounded, infinite.
+Now that the thesis proposal was approved, it was time to have fun writing code and running experiments! However, it didn't take too long before I started to flounder. It was not as easy to prove my thesis as I thought it would be. Instead of enjoying smooth sailing, I worked up a sweat bailing. I got some promising results, but I also got results which seemed to go against what I was trying to prove. There was a lot more to learn than I expected, and it took much longer than I planned. I ran gazillions of experiments. Truly the space of possible experiments is unbounded, infinite. 
 
 </p><p>
-<small>Last revised 6 June 2023</small>
+I did gradually overcome obstacles and find ways to show what I wanted to show. By March of 2012 I was feeling fairly good about experimental results.
+
+</p><p>
+Below are a few more selections from my journal:
+
+</p><p>
+March 5, 2012
+</p>
+
+<blockquote>
+<p>
+"Last Thursday I met with Dr. Ringger and explained why, in speech rec and mt, we use language models as if they estimated a prob of belonging. He expressed incredulity that I could uncover a fundamental error in the field of language modeling and challenged my judgement for believing that I could do so. I was surprised that he gave such direct voice to these concerns. I have long suspected that he had those concerns, but this was the first time he directly expressed them. I am happy that he has done so, because it will help improve our communication.
+
+</p><p>
+Both my professors, Dr. Ringger and Dr. Seppi, have continued to express disbelief of the primary claims I make to motivate the new model I introduce. I have already given many reasons to explain my motivation, but I realized last week that the reasons have not been sufficient for my professors. On Saturday I realized that I could prove my motivational claims, and did so in a two sentence email. I am beginning to understand that I need to prove all my claims. Now that my motivational claims have been formally proven, I believe that my professors will soon approve my work."
+</p>
+</blockquote> 
+
+<p>
+March 14, 2012
+</p>
+
+<blockquote>
+<p>
+"Dr. Ringger said he is coming around to agreeing with me on a main point I have been making in my thesis! I am diving into the study of DNA sequence evolution, as part of my planned doctoral work. I am doing that first, then refining my master's thesis, each day."
+</p>
+</blockquote> 
+
+<p>
+
+</p><p>
+<small>Last revised 12 June 2023</small>
 
 </p><p>
 <small>Copyright &copy; 2023 Kevin Cook</small>
