More journal selections

--- a/adventure.html
+++ b/adventure.html
@@ -489,7 +489,6 @@ Below are a few more selections from my journal:
 </p><p>
 March 5, 2012
 </p>
-
 <blockquote>
 <p>
 "Last Thursday I met with Dr. Ringger and explained why, in speech rec and mt, we use language models as if they estimated a prob of belonging. He expressed incredulity that I could uncover a fundamental error in the field of language modeling and challenged my judgement for believing that I could do so. I was surprised that he gave such direct voice to these concerns. I have long suspected that he had those concerns, but this was the first time he directly expressed them. I am happy that he has done so, because it will help improve our communication.
@@ -502,7 +501,6 @@ Both my professors, Dr. Ringger and Dr. Seppi, have continued to express disbeli
 <p>
 March 14, 2012
 </p>
-
 <blockquote>
 <p>
 "Dr. Ringger said he is coming around to agreeing with me on a main point I have been making in my thesis! I am diving into the study of DNA sequence evolution, as part of my planned doctoral work. I am doing that first, then refining my master's thesis, each day."
@@ -510,9 +508,62 @@ March 14, 2012
 </blockquote> 
 
 <p>
+April 19, 2012
+</p>
+<blockquote>
+<p>
+"At the beginning of this month I had two key meetings, one short one with Dr. Ringger and Dr. Seppi, and one long one with Dr. Seppi. For both of those meetings I prepared ahead of time to directly address their specific concerns. To prepare for the meeting with Dr. Seppi, I spent an entire day pondering how best to do that, and during the meeting it was evident that I had succeeded, what an important blessing.
 
 </p><p>
-<small>Last revised 12 June 2023</small>
+Today, I had a good talk with Dr. Seppi. He outlined three important objectives for me to accomplish this summer, repair my relationship with Dr. Ringger, help a particular funded research project to succeed, and submit a paper based on my master's thesis. He said that if I can accomplish these things, I will probably be able to be accepted into the PhD program in the fall. If I don't accomplish those things, I probably won't be accepted. I am planning to accomplish them and am very happy to have this opportunity to succeed.
+
+</p><p>
+Starting very soon, I am planning to work for Dr. Seppi on a funded research project. The project is particularly suited to my expertise in language modeling. This work will give me significant opportunity to advance my new academic career, but it will also postpone the biology-related thesis I am planning to pursue, which is OK because it will better prepare me for that future work.
+
+</p><p>
+I am beginning to see and believe that my job is to do the best with the opportunities that I have, turning down those which will seriously distract from the direction I need to go, and pursuing those which will help, realizing that important opportunities may be very unexpected. I will expect that unexpected opportunities will enable me to fulfill my responsibilities in mortality."
+</p>
+</blockquote> 
+
+<p>
+May 14, 2012
+</p>
+<blockquote>
+<p>
+"This morning Sue fasted together with me, to help me in my meeting with Dr. Ringger. The meeting went very well. I believe that the email I sent on April 27th, just after our last meeting, did indeed address his primary concern with me. Now, the problem between us has been solved. This is such a great blessing. The scripture comes to mind, "Howbeit this kind goeth not out but by prayer and fasting." (Matthew 17:21)." 
+</p>
+</blockquote> 
+
+<p>
+May 16, 2012
+</p>
+<blockquote>
+<p>
+"Yesterday was the magicc kickoff meeting, related to my new work which I am starting full-time as of today." 
+</p>
+</blockquote> 
+
+<p>
+July 18, 2012
+</p>
+<blockquote>
+<p>
+"Brian died in early morning"
+</p>
+</blockquote> 
+<p>
+
+<p>
+</p>
+<blockquote>
+<p>
+</p>
+</blockquote> 
+<p>
+
+
+</p><p>
+<small>Last revised 13 June 2023</small>
 
 </p><p>
 <small>Copyright &copy; 2023 Kevin Cook</small>
