--- a/reader.html
+++ b/reader.html
@@ -1,19 +1,27 @@
-<!DOCTYPE html><html lang="en-US"><head><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><title>Reader</title><style>button {
-  width: 32%;
-  height: 160px;
-  font-size: x-large;
-}
+<!DOCTYPE html><html lang="en-US">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<title>Reader</title>
+<style>
+  button {
+    width: 32%;
+    height: 160px;
+    font-size: x-large;
+  }
 </style>
 </head>
 <body>
 <audio src="" id="player"></audio>
-<div><button id="prevButton" type="button"><-</button>
+<div>
+<button id="prevButton" type="button"><-</button>
 <button id="playButton" type="button">Play</button>
 <button id="nextButton" type="button">-></button>
 </div>
 <div><p id="text">And it came to pass ...</p>
 </div>
-<div><button id="prevChapterButton" type="button"><<-</button>
+<div>
+<button id="prevChapterButton" type="button"><<-</button>
 <button type="button">- -</button>
 <button id="nextChapterButton" type="button">->></button>
 </div>
