--- a/reader.html
+++ b/reader.html
@@ -25,6 +25,17 @@
 <button type="button">- -</button>
 <button id="nextChapterButton" type="button">->></button>
 </div>
+<div>
+<small>
+<p>
+This site stores current chapter and verse identifiers on your device, so that your place will not be lost when your browser closes.
+</p><p>
+Text and audio of the Book of Mormon: Another Testament of Jesus Christ obtained from <code>churchofjesuschrist.org</code>. See applicable copyright information on that site. 
+</p><p>
+Copyright &copy; 2023 Kevin Cook
+</p>
+</small>
+</div>
 <script>
 const api = "https://chm5ks3vil.execute-api.us-east-2.amazonaws.com";
 
