--- a/reader.html
+++ b/reader.html
@@ -28,11 +28,9 @@
 <div>
 <small>
 <p>
-This site stores current chapter and verse identifiers on your device, so that your place will not be lost when your browser closes.
+This site stores current chapter and verse identifiers on your device, so that your place will not be lost when your browser closes. Text and audio of the Book of Mormon obtained from <a href="https://churchofjesuschrist.org">churchofjesuschrist.org</a>. See applicable copyright information on that site. 
 </p><p>
-Text and audio of the Book of Mormon: Another Testament of Jesus Christ obtained from <code>churchofjesuschrist.org</code>. See applicable copyright information on that site. 
-</p><p>
-Copyright &copy; 2023 Kevin Cook
+&copy; 2023 by Kevin Cook
 </p>
 </small>
 </div>
