--- a/reader.html
+++ b/reader.html
@@ -28,9 +28,14 @@
 <div>
 <small>
 <p>
-This site stores current chapter and verse identifiers on your device, so that your place will not be lost when your browser closes. Text and audio of the Book of Mormon obtained from <a href="https://churchofjesuschrist.org">churchofjesuschrist.org</a>. See applicable copyright information on that site. 
+NOT FOR PUBLIC USE. Permission required to provide text and audio of the Book of Mormon is requested. Text and audio obtained from <a href="https://churchofjesuschrist.org">churchofjesuschrist.org</a>.
+
+</p><p>
+This site stores current chapter and verse identifiers on your device, so that your place will not be lost when your browser closes.  
+
 </p><p>
 &copy; 2023 by Kevin Cook
+
 </p>
 </small>
 </div>
