MINS is better!

--- a/adventure.html
+++ b/adventure.html
@@ -551,7 +551,30 @@ July 18, 2012
 "Brian died in early morning"
 </p>
 </blockquote> 
+
 <p>
+Brian is my son. He passed away peacefully in his sleep, for no apparent reason. He was strong, emotionally and physically. He had recently received a call to serve as a missionary in Mexico. I love and miss him. I am grateful to God for the privilege of being his father. I will see him again. I have no doubt of that!
+
+</p><p>
+Shortly after Brian died I found a much simpler way to prove my thesis. The experimental results were clear. I decided to stick with those results. I knew that the Lord had helped me.
+
+</p><p>
+I learned something from those results which amazed me. I my thesis I argued that if a probability that a sequence belongs to a language is desired, then it is important to avoid assuming a degree of generalization. I proposed two methods for avoiding such an assumption: MINS and Segment Selection. MINS was very simple and fast. Segment Selection was sophisticated and slower. I assumed that Segment Selection would be more effective, but it wasn't. MINS was better! I figured that this fact was significant and planned to base my doctoral research on it.
+
+</p><p>
+The kickoff meeting was the start of a research project funded by the US Air Force to learn more about using UAVs (Unmanned Aerial or Air Vehicles) to intelligently and cooperatively track ground targets in an urban environment. BYU had been selected to help with this research project because of the MAGICC lab led by Randy Beard from the electrical engineering department and Tim McLain from the mechanical engineering department. Dr. Seppi (from the computer science department) got involved, and then he invited me to share my ideas about how research in language modeling could be applied to this urban target tracking problem. The urban environment meant that there would be tall buildings which would sometimes prevent UAVs from viewing the ground target. A similar situation occurs in language modeling when an unknown word is part of a sentence. An unknown word is similar to a period of time in which the ground target is not observed by UAVs overhead.
+
+</p><p>
+Most of my time was spent working on the UAV research project with Dr. Beard, Dr. Seppi, and others. I spent a little time working with my advisor to finish up my thesis so that I could earn my Master's degree. All of the courses required for both the Master's and Doctoral degrees had been completed.
+
+</p><p>
+The UAV research project was in Phase 1, with funding for six months. All parties involved hoped to extend that research into Phase 2, which would include much more significant funding and last two years. I played a leadership role, which was super fun, although some of it surely went to my head.
+
+</p><p>
+On November 7 my advisor decided to postpone plans for my thesis defense. He thought I had overlooked a critically relevant field of study. I told him that I would look into it. I did, and argued that the field was not as relevant as it appeared.
+
+
+</p>
 
 <p>
 </p>
@@ -559,11 +582,10 @@ July 18, 2012
 <p>
 </p>
 </blockquote> 
+
 <p>
-
-
 </p><p>
-<small>Last revised 13 June 2023</small>
+<small>Last revised 21 June 2023</small>
 
 </p><p>
 <small>Copyright &copy; 2023 Kevin Cook</small>
